[tool.poetry]
name = "aurora"
version = "0.0.0"
description = "let's begin the magic!"
authors = ["muhammad-fiaz <contact@muhammadfiaz.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logly = ">=0.0.6,<0.1.0"
packaging = ">=24.0,<25.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl"}
torchaudio = {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.1%2Bcu121-cp311-cp311-win_amd64.whl"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
